--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationSettings":{
+    "Token":"AZouthAnu12347e45456ghgf676879hgjkk89098034vghgj"
+  },
   "ConnectionStrings":{
     "DefaultSqlConnection":"server=DESKTOP-Q0T2071; database=SampleTest; Integrated Security=SSPI"
   },
